Added swagger code generation to backend and extended tests